# dwc-extraction-pipeline

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
config/: schema.yaml
src/: config.py  field_extractor.py  image_preprocess.py  main.py  ocr_engine.py  openai_fallback.py  utils.py  validator.py
tests/: test_field_extractor.py  test_image_ocr.py  test_status_file.py
